--- a/SEA.bib
+++ b/SEA.bib
@@ -1,12 +1,304 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for hustquick at 2016-12-19 15:15:37 +0800 
+%% Created for hustquick at 2016-12-20 18:38:30 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Zhu2015,
+	Abstract = {Abstract In this article, an experimental investigation is carried out to examine the heat transfer characteristics of a coil type solar dish receiver under actual concentrate solar radiation conditions. During the test, the concentrated solar flux is approximately 1000 kW/m2 at aperture. The solar irradiance is almost unchanged (650 W/m2) for continuous two hours in the afternoon, which is used to analyze the energy and exergy performance of the solar receiver. Experimental results show that, the efficiency of the solar receiver is normally above 70% with the highest efficiency of 82%, whereas at steady state, the efficiency is maintained at around 80%. A very low value of the heat loss factor (0.02 kW/K) could be achieved during the current steady state operating conditions. The highest value of the exergy rate is around 8.8 kW, whereas the maximum energy rate can reach 21.3 kW. In addition, the highest exergy efficiency is approximately 28%, and the highest energy efficiency is around 82%. },
+	Author = {Jianqin Zhu and Kai Wang and Hongwei Wu and Dunjin Wang and Juan Du and A.G. Olabi},
+	Date-Added = {2016-12-20 10:38:22 +0000},
+	Date-Modified = {2016-12-20 10:38:30 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.apenergy.2015.07.013},
+	Issn = {0306-2619},
+	Journal = {Applied Energy},
+	Keywords = {Radiation},
+	Pages = {519 - 527},
+	Title = {Experimental investigation on the energy and exergy performance of a coiled tube solar receiver},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0306261915008429},
+	Volume = {156},
+	Year = {2015},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0306261915008429},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.apenergy.2015.07.013}}
+
+@article{Cheng2013,
+	Abstract = {The main objective of the present work is to develop a general-purpose numerical method for improving design/simulation tools for the concentrating solar collectors (CSCs) of concentrated solar power (CSP) systems. A new modelling method and homemade unified code with the Monte Carlo Ray-Trace (MCRT) method for the \{CSCs\} are presented firstly. The details of the new designing method and homemade unified code with \{MCRT\} for numerical investigations on solar concentrating and collecting characteristics of the \{CSCs\} are introduced. Three coordinate systems are used in the \{MCRT\} program and can be totally independent from each other. Solar radiation in participating medium and/or non-participating medium can be taken into account simultaneously or dividedly in the simulation. The criteria of data processing and method/code checking are also proposed in detail. Finally the proposed method and code are applied to simulate and analyze the involuted photo-thermal conversion processes in three typical CSCs. The results show that the proposed method and model are reliable to simulate various types of CSCs. },
+	Author = {Z.D. Cheng and Y.L. He and F.Q. Cui},
+	Date-Added = {2016-12-20 10:34:08 +0000},
+	Date-Modified = {2016-12-20 10:35:21 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.apenergy.2012.07.048},
+	Issn = {0306-2619},
+	Journal = {Applied Energy},
+	Keywords = {Solar energy flux density distribution},
+	Note = {Sustainable Development of Energy, Water and Environment Systems},
+	Pages = {686 - 698},
+	Title = {A new modelling method and unified code with MCRT for concentrating solar collectors and its applications},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0306261912005788},
+	Volume = {101},
+	Year = {2013},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0306261912005788},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.apenergy.2012.07.048}}
+
+@article{Chen2007,
+	Abstract = {The optimal performance for a class of generalized irreversible universal steady-flow heat-engine cycle models, consisting of two heating branches, two cooling branches and two adiabatic branches, and with losses due to heat-resistance, heat leaks and internal irreversibility was analyzed using finite-time thermodynamics. The analytical formulae for power, efficiency, entropy-generation rate and an ecological criterion of the irreversible heat-engine cycle are derived. Moreover, analysis and optimization of the model were carried out in order to investigate the effect of the cycle process on the performance of the cycles. The results obtained include the performance characteristics of Diesel, Otto, Brayton, Atkinson, Dual and Miller cycles with the losses of heat-resistance, heat leak and internal irreversibility. },
+	Author = {Lingen Chen and Wanli Zhang and Fengrui Sun},
+	Date-Added = {2016-12-20 08:18:38 +0000},
+	Date-Modified = {2016-12-20 08:18:38 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.apenergy.2006.09.004},
+	Issn = {0306-2619},
+	Journal = {Applied Energy},
+	Keywords = {Ecological function},
+	Number = {5},
+	Pages = {512 - 525},
+	Title = {Power, efficiency, entropy-generation rate and ecological optimization for a class of generalized irreversible universal heat-engine cycles},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0306261906001243},
+	Volume = {84},
+	Year = {2007},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0306261906001243},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.apenergy.2006.09.004}}
+
+@article{Fenies2015,
+	Abstract = {Abstract A three phase free piston type double acting Stirling engine model is proposed and validated using experimental results. The modeling strategy is based on a combination of two sub-models: a global thermal model of the engine to deal with heat sources coupling and a detailed equivalent electrical network model which accounts for the gas and mechanical dynamic physics of the engine. Derived features, such as the amplitude, the frequency, the compression and the expansion powers are then finally obtained. The model is experimentally validated with a prototype of a free piston Stirling engine. Mean error on the amplitude, the frequency, the internal temperatures and the compression and expansion powers is 9\%, so the model is considered accurate enough to predict performances. For optimization purpose, a numerical analysis is performed selecting the three following critical parameters: (i) dead volume of the chambers, (ii) natural frequency of the mechanical oscillators and (iii) thermal conduction between hot and cold sides. Smaller dead volume, large oscillating mass and high insulation are to be sought for maximizing the performances. With a pressurization of 3 bar, a theoretical useful power of 18 W can be reach with conservative modification of the existing prototype. Moreover, energy and exergy analyses highlight the main losses in the system: thermal leakage, gas spring hysteresis as well as heat transfer and viscous dissipation in the heat exchangers. },
+	Author = {Gwyddyon $F\acute{e}ni\grave{e}s$ and Fabien Formosa and Julien Ramousse and Adrien Badel},
+	Date-Added = {2016-12-20 08:02:59 +0000},
+	Date-Modified = {2016-12-20 08:02:59 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.apenergy.2015.08.128},
+	Issn = {0306-2619},
+	Journal = {Applied Energy},
+	Keywords = {Optimization},
+	Pages = {350 - 361},
+	Title = {Double acting Stirling engine: Modeling, experiments and optimization},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0306261915010648},
+	Volume = {159},
+	Year = {2015},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0306261915010648},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.apenergy.2015.08.128}}
+
+@article{Jia2016,
+	Abstract = {Abstract This paper presents a linearization of the dynamic equation for a free-piston engine generator (FPEG), and simplifies it to a one-degree forced vibration system with viscous damping. The analogy between a mass-spring damper and a \{FPEG\} system is expressed, and the solution to the vibration system is solved. The model was successfully validated with respect to experimental data obtained from a prototype. The simulated piston displacement during steady operation showed similar trends with the test results and the error of the displacement amplitude was controlled within 3%. The state-space equations and the transfer function of the system are obtain using the fast response numerical model. An example of model application in the real \{FEPG\} control system was provided. Compared to the previous numerical model with differential approaches, the solving time of the proposed fast response model can be significantly reduced. The simplicity and flexibility of the proposed model make it feasible to be implemented to several computing software, i . e . Matlab, AMESim, Labview, Dymola et al. It can be easily implemented to real-time Hardware-in-the-Loop (HIL) simulation model for the future piston dynamic control system development. In addition, since it reveals how an \{FPEG\} operates in a resonant principle, the model is useful for parameter selection in the \{FPEG\} design process. },
+	Author = {Boru Jia and Andrew Smallbone and Huihua Feng and Guohong Tian and Zhengxing Zuo and A.P. Roskilly},
+	Date-Added = {2016-12-20 03:21:17 +0000},
+	Date-Modified = {2016-12-20 03:21:24 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.apenergy.2015.10.108},
+	Issn = {0306-2619},
+	Journal = {Applied Energy},
+	Keywords = {Control application},
+	Pages = {321 - 329},
+	Title = {A fast response free-piston engine generator numerical model for control applications},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0306261915013446},
+	Volume = {162},
+	Year = {2016},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0306261915013446},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.apenergy.2015.10.108}}
+
+@article{Tursunbaev2007,
+	Abstract = {An analytic model is proposed of a solar power plant (SPP) with a Stirling engine that is based on the isothermal model of the Stirling engine (SE) working process and is improved by account for the actual heat exchange, the hydraulic and mechanical losses in the SE, the losses in the electric generator, and also the basic parameters of the solar radiation concentrator.PUBLICATION ABSTRACT]},
+	Author = {Tursunbaev,I. A.},
+	Date-Added = {2016-12-20 03:14:36 +0000},
+	Date-Modified = {2016-12-20 03:14:57 +0000},
+	Isbn = {0003701X},
+	Journal = {Applied Solar Energy},
+	Keywords = {Energy; Solar energy; Power plants; 8340:Electric, water & gas utilities},
+	Language = {English},
+	Month = {03},
+	Note = {版权 - Allerton Press, Inc. 2007; 最近更新 - 2014-08-30},
+	Number = {1},
+	Pages = {13-16},
+	Title = {Analytic model of solar power plant with a Stirling engine},
+	Url = {http://search.proquest.com/docview/231313399?accountid=11524},
+	Volume = {43},
+	Year = {2007},
+	Bdsk-Url-1 = {http://search.proquest.com/docview/231313399?accountid=11524}}
+
+@article{Ni2016,
+	Abstract = {Abstract A key issue in designing and optimizing Stirling engines is to build a precise thermodynamic model to predict the output power, thermal efficiency, and detailed performance properties and provide useful information for further improvement. In this study, a thermodynamic model called Improved Simple Analytical Model (ISAM) was proposed, carefully considering heat and power losses in Stirling engines. A 100 W β -type Stirling engine was built and tested with helium and nitrogen when pressure and rotary speed ranging from 1.6 \{MPa\} to 3 \{MPa\} and 260 r/min to 1380 r/min, respectively. Experimental information on performance, such as \{PV\} diagrams and temperatures of the heater and cooler, was much detailed. Increasing rotary speed brings a ``thin'' \{PV\} diagram because it made compression and expansion processes become more imperfect, indicating heat transfer enhancement was necessary for compression and expansion chamber in a high speed Stirling engine. Shaft power reached the maximum value of 30.1 W for helium and 21.0 W for nitrogen at rotary speeds of 1000 r/min and 650 r/min, respectively. Improving the mean pressure of gas increased the indicated power, cycle efficiency, shaft power, and electrical power. The maximum indicated power and cycle efficiency were 165 W and 16.5% for helium and 139 W and 12.2% for nitrogen in the same working conditions of 2.96 \{MPa\} and 1120 r/min. The \{ISAM\} agrees well with the experimental data with a deviation of 4.3--13.4% for helium and 1--7.1% for nitrogen. Analysis of energy losses with \{ISAM\} indicated that helium had larger shuttle and seal leakage losses and smaller flow resistance and regenerator heat transfer losses than nitrogen under the same working conditions. Flow resistance and regenerator heat transfer losses, which increased much more rapidly than seal leakage or shuttle heat losses with the increase in rotary speed and pressure, played an important role and resulted in different performances with the two working gases. This study provides comprehensive understanding of the influence mechanism of rotary speed, pressure and working gas in the view of heat/power losses for Stirling engine performance, and recommends that more work (e.g., mechanisms of heat and power losses and \{PV\} diagrams) should be performed to improve the precision of second-order models. },
+	Author = {Mingjiang Ni and Bingwei Shi and Gang Xiao and Hao Peng and Umair Sultan and Shurong Wang and Zhongyang Luo and Kefa Cen},
+	Date-Added = {2016-12-20 03:06:04 +0000},
+	Date-Modified = {2016-12-20 03:07:13 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.apenergy.2016.02.069},
+	Issn = {0306-2619},
+	Journal = {Applied Energy},
+	Keywords = {Working gas},
+	Pages = {768 - 787},
+	Title = {Improved Simple Analytical Model and experimental study of a 100 W beta-type Stirling engine},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0306261916302069},
+	Volume = {169},
+	Year = {2016},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0306261916302069},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.apenergy.2016.02.069}}
+
+@article{Lovegrove2004,
+	Abstract = {The Solar Thermal Group at the Australian National University has completed an experimental solar-driven ammonia-based closed-loop thermochemical energy storage system. The system uses a cavity receiver containing 20 reactor tubes filled with iron based catalyst material, which collects the radiation from a 20 m2 dish solar concentrator. Reliable operation over a range of conditions including cloud transients has been demonstrated. Parallel theoretical investigations have established that maximising the potential for electrical power production from ammonia synthesis reactors, can largely be achieved through appropriate choice of average operating temperature in standard reactors. The possibility of operating the ammonia based system using trough concentrators has also been investigated theoretically, and the preliminary results indicate encouraging energy storage efficiencies in the region of 53\%. },
+	Author = {K Lovegrove and A Luzzi and I Soldiani and H Kreetz},
+	Date-Added = {2016-12-20 00:50:49 +0000},
+	Date-Modified = {2016-12-20 00:50:49 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.solener.2003.07.020},
+	Issn = {0038-092X},
+	Journal = {Solar Energy},
+	Note = {Solar World Congress 2001},
+	Number = {1--3},
+	Pages = {331 - 337},
+	Title = {Developing ammonia based thermochemical energy storage for dish power plants},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0038092X03002895},
+	Volume = {76},
+	Year = {2004},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0038092X03002895},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.solener.2003.07.020}}
+
+@article{Aichmayer2015,
+	Abstract = {Abstract The solar receiver is one of the key components of hybrid solar micro gas-turbine systems, which would seem to present a number of advantages when compared with Stirling engine based systems and photovoltaic panels. In this study a solar receiver meeting the specific requirements for integration into a small-scale (10 kWel) dish-mounted hybrid solar micro gas-turbine system has been designed with a special focus on the trade-offs between efficiency, pressure drop, material utilization and economic design. A situation analysis, performed using a multi-objective optimizer, has shown that a pressurized configuration, where the solar receiver is placed before the turbine, is superior to an atmospheric configuration with the solar receiver placed after the turbine. Based on these initial design results, coupled CFD/FEM simulations have been performed, allowing detailed analysis of the designs under the expected operating conditions. The results show that the use of volumetric solar receivers to provide heat input to micro gas-turbine based solar dish systems appears to be a promising solution; with material temperatures and material stresses well below permissible limits. },
+	Author = {Lukas Aichmayer and James Spelling and Bj枚rn Laumert},
+	Date-Added = {2016-12-20 00:50:29 +0000},
+	Date-Modified = {2016-12-20 00:50:29 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.solener.2015.01.013},
+	Issn = {0038-092X},
+	Journal = {Solar Energy},
+	Keywords = {Solar receiver},
+	Pages = {378 - 396},
+	Title = {Preliminary design and analysis of a novel solar receiver for a micro gas-turbine based solar dish system},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0038092X1500016X},
+	Volume = {114},
+	Year = {2015},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0038092X1500016X},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.solener.2015.01.013}}
+
+@article{Craig2016,
+	Author = {Craig, Ken J. and Marsberg, Justin and Meyer, Josua P.},
+	Date-Added = {2016-12-20 00:49:58 +0000},
+	Date-Modified = {2016-12-20 00:49:58 +0000},
+	Doi = {http://dx.doi.org/10.1063/1.4949061},
+	Eid = {030009},
+	Journal = {AIP Conference Proceedings},
+	Number = {1},
+	Title = {Combining ray tracing and CFD in the thermal analysis of a parabolic dish tubular cavity receiver},
+	Url = {http://scitation.aip.org/content/aip/proceeding/aipcp/10.1063/1.4949061},
+	Volume = {1734},
+	Year = {2016},
+	Bdsk-Url-1 = {http://scitation.aip.org/content/aip/proceeding/aipcp/10.1063/1.4949061},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1063/1.4949061}}
+
+@article{Wang2014,
+	Abstract = {Abstract An inverse design method is developed in order to quickly find possible cavity receiver designs with relative uniform cavity wall surface temperature for a solar dish cavity receiver. In this design method, a heat transfer model of the absorber wall is used for analyzing the main heat transfer process between the cavity wall outer surface, the inner surface and the working fluid. Furthermore, a ray-tracing model based on the parameters of a real dish is utilized for obtaining the solar radiative boundary conditions for the heat transfer model. Impinging jet cooling technology is introduced due to its high heat transfer coefficient in the stagnation area, which can be used for cooling the peak flux on the cavity wall. After applying a well-designed impinging system, the temperature peak on the peak flux region in traditional receiver designs can be mitigated without introducing any over pressure drop problem. },
+	Author = {Wujun Wang and Haoxin Xu and Bj{\"o}rn Laumert and Torsten Strand},
+	Date-Added = {2016-12-20 00:49:29 +0000},
+	Date-Modified = {2016-12-20 00:49:29 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.solener.2014.10.019},
+	Issn = {0038-092X},
+	Journal = {Solar Energy},
+	Keywords = {Impinging},
+	Pages = {745 - 755},
+	Title = {An inverse design method for a cavity receiver used in solar dish Brayton system},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0038092X14005052},
+	Volume = {110},
+	Year = {2014},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0038092X14005052},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.solener.2014.10.019}}
+
+@article{Loni2016,
+	Abstract = {Abstract In this study, a solar dish collector is considered with a rectangular cavity receiver. The investigated parameters were included the receiver aperture area (a2), receiver tube diameter, cavity depth, inlet temperature and mass flow rate through the receiver. This cavity receiver is used as the heat source of the organic Rankine cycle (ORC). The \{ORC\} system is considered with \{R141b\} as the working fluid at the saturated condition. The main objective is the calculation of the optimum parameters for attaining the maximum overall thermal efficiency of the system. With the help of the receiver modeling techniques, the optimum aspect ratios of 54.25, 40.69, 32.56, 23.25 and 18.09 are identified for five cavity depths of 0.5a, 0.75a, 1a, 1.5a, and 2a where the accompanying optical efficiencies are 89\%, 92\%, 94\%, 96\% and 96\%, respectively. It is concluded that for increasing the collector efficiency and overall thermal efficiency, a higher mass flow rate, and a lower inlet thermal oil inlet temperature are required. Also the results show that the optimum characteristic of the cavity for achieving highest collector efficiency and the highest overall thermal efficiency includes smaller tube diameter, lower inlet temperature of the working fluid, and the cavity depth of 1a. },
+	Author = {R. Loni and A.B. Kasaeian and E. Askari Asli-Ardeh and B. Ghobadian and W.G. Le Roux},
+	Date-Added = {2016-12-20 00:49:05 +0000},
+	Date-Modified = {2016-12-20 00:49:05 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.applthermaleng.2016.08.014},
+	Issn = {1359-4311},
+	Journal = {Applied Thermal Engineering},
+	Keywords = {Thermal oil},
+	Pages = {1298 - 1309},
+	Title = {Performance study of a solar-assisted organic Rankine cycle using a dish-mounted rectangular-cavity tubular solar receiver},
+	Url = {http://www.sciencedirect.com/science/article/pii/S1359431116313606},
+	Volume = {108},
+	Year = {2016},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S1359431116313606},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.applthermaleng.2016.08.014}}
+
+@article{Wang2013,
+	Abstract = {Abstract In this paper, Monte Carlo Ray Tracing (MCRT) and Finite Volume Method (FVM) coupling method is adopted to solve the radiation, conduction and convection coupled heat transfer problems of porous media receiver with multi-dish collector. The MCRT method is used to obtain the concentrated heat flux distribution on the fluid inlet surface of porous media receiver. The local thermal non-equilibrium (LTNE) model with concentrated solar irradiation on the fluid inlet surface is used for energy equations. FVM software FLUENT with User Defined Functions (UDFs) is used to solve the fluid phase and solid phase heat transfer problems. The effects of solar irradiance, air inlet velocity, average particle diameter, receiver radius and air properties on the temperature distribution are investigated. },
+	Author = {Fuqiang Wang and Yong Shuai and Heping Tan and Xiaofeng Zhang and Qianjun Mao},
+	Date-Added = {2016-12-20 00:48:39 +0000},
+	Date-Modified = {2016-12-20 00:48:39 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.solener.2013.04.004},
+	Issn = {0038-092X},
+	Journal = {Solar Energy},
+	Keywords = {Porous media},
+	Pages = {158 - 168},
+	Title = {Heat transfer analyses of porous media receiver with multi-dish collector by coupling MCRT and FVM method},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0038092X13001370},
+	Volume = {93},
+	Year = {2013},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0038092X13001370},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.solener.2013.04.004}}
+
+@article{Wang2010,
+	Abstract = {A three-dimensional model of parabolic dish-receiver system with argon gas as the working fluid is designed to simulate the thermal performance of a dish-type concentrated solar energy system. The temperature distributions of the receiver wall and the working gas are presented. The impact of the aperture size, inlet/outlet configuration of the solar receiver and the rim angle of the parabolic dish are investigated. The results show that the aperture size and different inlet/outlet configuration have a considerable impact on the receiver wall and gas temperatures, but the rim angle of the parabolic dish has negligible influence. },
+	Author = {Mo Wang and Kamran Siddiqui},
+	Date-Added = {2016-12-20 00:48:14 +0000},
+	Date-Modified = {2016-12-20 00:48:14 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.renene.2010.03.021},
+	Issn = {0960-1481},
+	Journal = {Renewable Energy},
+	Keywords = {Thermal performance},
+	Number = {11},
+	Pages = {2501 - 2513},
+	Title = {The impact of geometrical parameters on the thermal performance of a solar receiver of dish-type concentrated solar energy system},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0960148110001382},
+	Volume = {35},
+	Year = {2010},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0960148110001382},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.renene.2010.03.021}}
+
+@article{Mao2014,
+	Author = {Qianjun, Mao and Ming, Xie and Yong, Shuai and Yuan, Yuan},
+	Date-Added = {2016-12-20 00:47:55 +0000},
+	Date-Modified = {2016-12-20 00:47:55 +0000},
+	Doi = {10.1002/ep.11914},
+	Issn = {1944-7450},
+	Journal = {Environmental Progress \& Sustainable Energy},
+	Keywords = {solar energy, energy efficiency, direct normal irradiation, experiment},
+	Number = {4},
+	Pages = {1438--1444},
+	Title = {Study on solar photo-thermal conversion efficiency of a solar parabolic dish system},
+	Url = {http://dx.doi.org/10.1002/ep.11914},
+	Volume = {33},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1002/ep.11914}}
+
+@article{Daabo2016,
+	Abstract = {Abstract Concentrated Solar Power (CSP) can be used as an efficient low cost energy conversion system to produce different types of energy, such as electricity, through the use of concentrated parabolic dish systems. In the study of CSP, most of the researchers focus on the heat losses and their relationships to the receivers' geometries. The present study concentrates on the optical efficiency as well as the flux distribution of the three different geometries: cylindrical, conical and spherical, of a cavity receiver, with the objective of analysing their behaviour using an advanced ray tracing method. The results of this study have shown that there is a connection between the flux distribution on the internal surfaces of the cavities and their optical efficiency. Moreover, the conical shape receiver received, as well as absorbed, a higher amount of reflected flux energy than the other shapes. The optical efficiency reached 75.3\%, 70.1\% and 71.5\% for the conical, spherical and cylindrical shapes respectively at surface absorptivity of 85\%. Also, the focal point location depends on the shape of the cavity receiver and its absorptivity. Thereby, there is an optimum distance for each design depending on these two factors. The results of the simulated work are validated using the experimental work found in the literature. },
+	Author = {Ahmed M. Daabo and Saad Mahmoud and Raya K. Al-Dadah},
+	Date-Added = {2016-12-20 00:47:15 +0000},
+	Date-Modified = {2016-12-20 00:47:15 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.energy.2016.08.025},
+	Issn = {0360-5442},
+	Journal = {Energy},
+	Keywords = {Optical efficiency},
+	Pages = {513 - 525},
+	Title = {The effect of receiver geometry on the optical performance of a small-scale solar cavity receiver for parabolic dish applications},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0360544216311288},
+	Volume = {114},
+	Year = {2016},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0360544216311288},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.energy.2016.08.025}}
+
+@article{Sha2016,
+	Abstract = {Abstract The optical performance of a solar dish concentrator/cavity receiver system based on the Monte Carlo Ray Tracing Method (MCRTM) was carried out under ideal optics. The study was precipitated by a need to analyze the influence of geometrical parameters and surface properties of a cavity receiver systematically and to understand the mechanism of the optical performance under various parameters. These include diameter ratio (the ratio of aperture diameter to absorber outer diameter), height ratio (the ratio of absorber height to absorber outer diameter) and sidewall absorptivity of cavity receiver. In addition, an optical efficiency of the absorber is defined and presented for the first time. The analysis indicates that the optical efficiency increases and then decreases with higher height ratio, while optical efficiency curves are reduced monotonically with diameter ratio. Simultaneously, the effects of the height and diameter ratios on optical efficiency are both influenced by sidewall absorptivity. Based on the results, a correlation of optical efficiency was further developed to quantify the influences of these factors. The maximum optical efficiency and its corresponding optimal height ratio from both simulation and correlation are presented and obtain reasonable agreement. The optimized selection of height ratio along with diameter ratio are suggested using this result. The height ratio is found to be a pure controlling parameter of the radiation flux distribution. },
+	Author = {Sha Li and Guoqiang Xu and Xiang Luo and Yongkai Quan and Yunting Ge},
+	Date-Added = {2016-12-20 00:46:47 +0000},
+	Date-Modified = {2016-12-20 00:46:47 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.energy.2016.06.143},
+	Issn = {0360-5442},
+	Journal = {Energy},
+	Keywords = {Solar concentrator/receiver system},
+	Pages = {95 - 107},
+	Title = {Optical performance of a solar dish concentrator/receiver system: Influence of geometrical and surface properties of cavity receiver},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0360544216309173},
+	Volume = {113},
+	Year = {2016},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0360544216309173},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.energy.2016.06.143}}
 
 @article{Barreto2017,
 	Abstract = {Abstract Stirling engines with parabolic dish for thermal to electric conversion of solar energy is one of the most promising solutions of renewable energy technologies in order to reduce the dependency from fossil fuels in electricity generation. This paper addresses the modelling and simulation of a solar powered Stirling engine system with parabolic dish and electric generator aiming to determine its energy production and efficiency. The model includes the solar radiation concentration system, the heat transfer in the thermal receiver, the thermal cycle and the mechanical and electric energy conversion. The thermodynamic and energy transfer processes in the engine are modelled in detail, including all the main processes occurring in the compression, expansion and regenerator spaces. Starting from a particular configuration, an optimization of the concentration factor is also carried out and the results for both the transient and steady state regimes are presented. It was found that using a directly illuminated thermal receiver without cavity the engine efficiency is close to 23.8% corresponding to a global efficiency of 10.4%. The components to be optimized are identified in order to increase the global efficiency of the system and the trade-off between system complexity and efficiency is discussed. },
@@ -579,8 +871,8 @@
 @article{Tlili2006,
 	Author = {Tlili, I. and Timoumi, Y. and Nasrallah, S. Ben},
 	Date-Added = {2016-08-05 02:36:47 +0000},
-	Date-Modified = {2016-08-22 04:48:21 +0000},
-	Journal = {International Journal of Heat $\&$ Technology},
+	Date-Modified = {2016-12-20 02:57:25 +0000},
+	Journal = {International Journal of Heat and Technology},
 	Number = {1},
 	Pages = {97-105},
 	Title = {Numerical simulation and losses analysis in a stirling engine},
