Changed some words.

--- a/Highlights.tex
+++ b/Highlights.tex
@@ -2,11 +2,11 @@
 
 \begin{document}
 \begin{enumerate}
-\item A novel idea of using SEA to overcome the limitation of small engine capacity in dish-Stirling system was proposed.
+\item A novel idea of using SEA (Stirling engine array) to overcome the limitation of small engine capacity in dish-Stirling system was proposed.
 
 \item Five basic connection types of SEA were summarized.
 
-\item A Stirling engine model considering various losses and irreversibilities was developed and validated.
+\item A Stirling engine model considering various irreversible phenomena was developed and validated.
 
 \item Influence of flow type and flow order on the performance of SEA was investigated.
 
