Second edition after rejection.

--- a/CoverLetter.tex
+++ b/CoverLetter.tex
@@ -22,7 +22,7 @@ Authors and our affiliations are listed as bellow:
 
 \end{itemize}
 
-In this work, we represented a novel idea of using Stirling engine array (SEA) in the dish-Stirling system to overcome its limitation of small engine capacity. To find out the influence of connection types on the performance of an SEA, connection types of SEA were classified into five basic types. A Stirling engine model considering various irreversible phenomena was developed and validated. SEA analytical models were developed based on the Stirling engine model. Different connection types of SEA were compared with various parameters. It was found that flow order has little influence on the SEA performance, and serial flows connection type is the best for an SEA to obtain best performance and adaptability for given heating and cooling fluids.
+In this work, we represent a novel idea of using Stirling engine array (SEA) in the dish-Stirling system to overcome its limitation of small engine capacity. To find out the influence of connection types on the performance of an SEA, connection types of SEA were classified into five basic types. A Stirling engine model considering various irreversible phenomena was developed and validated. SEA analytical models were developed based on the Stirling engine model. Different connection types of SEA were compared with various parameters. It was found that flow order has little influence on the SEA performance, and serial flows connection type is the best for an SEA to obtain best performance and adaptability for given heating and cooling fluids.
 
 This manuscript contains original research and has not been submitted/published earlier in any journal and is not being considered for publication elsewhere. I hope this paper is suitable for Applied Energy.
 
